--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,10 +8,11 @@
         displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
         processEscapes: true
       },
+      TeX: {
+        extensions: ["cancel.js"]
+      },  
       "HTML-CSS": { availableFonts: ["TeX"] }
     });
-  
-  
     MathJax.Hub.Register.MessageHook("Math Processing Error",function (message) {
       alert("Math Processing Error: "+message[1]);
       });
